# fastapi1

./: .dockerignore  .gitignore  DEPLOY.md  deploy.sh  docker-compose.prod.yml  docker-compose.yml  main_book_crud.py  package-lock.json  package.json  pyproject.toml
.github/: dependabot.yml
.github/workflows/: cd.yml  ci.yml
news-headline-backend/: .dockerignore  .env.example  Dockerfile  database_pg.sql  main.py  requirements.txt
news-headline-backend/cache/: news_cache.py
news-headline-backend/common/: page_result.py  result.py
news-headline-backend/config/: cache_conf.py  db_confing.py
news-headline-backend/crud/: ai_chat.py  favorite.py  history.py  news.py  users.py
news-headline-backend/models/: ai_chat.py  news.py  users.py
news-headline-backend/routers/: ai_chat.py  favorite.py  history.py  news.py  users.py
news-headline-backend/schemas/: ai_chat.py  favorite.py  history.py  users.py
news-headline-backend/tests/: conftest.py  test_health.py  test_users.py
news-headline-backend/utils/: auth.py  exception_handlers.py  response.py  security.py
news-headline-frontend/: .env.example  Dockerfile  nginx.conf  package-lock.json  package.json
news-headline-frontend/src/config/: api.js
news-headline-frontend/src/views/: AIChat.vue
